# HuaweiPasswordTool

./: CMakeLists.txt  README.md  hw_passwd.cpp  rev_hw.cpp  rev_hw.hpp  rev_hw_wapcbctable.h  rev_hw_wapcbctable.hpp
